steps/modules/vpc/sg.tf
resource "aws_security_group" "ec2_sg" {
  name        = "${var.resource_suffix}_sg"
  description = "Allow inbound traffic on port 80"
  vpc_id      = aws_vpc.this.id
}


resource "aws_vpc_security_group_ingress_rule" "allow_http_sg" {
  security_group_id = aws_security_group.ec2_sg.id

  from_port   = 80
  to_port     = 80
  ip_protocol = "tcp"
  referenced_security_group_id = aws_security_group.ec2_sg.id
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.ec2_sg.id

  from_port   = 80
  to_port     = 80
  ip_protocol = "tcp"
  cidr_ipv4   = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "allow_https" {
  security_group_id = aws_security_group.ec2_sg.id

  from_port   = 443
  to_port     = 443
  ip_protocol = "tcp"
  cidr_ipv4   = "0.0.0.0/0"
}

resource "aws_vpc_security_group_egress_rule" "allow_https" {
  security_group_id = aws_security_group.ec2_sg.id

  from_port   = 443
  to_port     = 443
  ip_protocol = "tcp"
  cidr_ipv4   = "0.0.0.0/0"
}

resource "aws_vpc_security_group_egress_rule" "allow_http_sg" {
  security_group_id = aws_security_group.ec2_sg.id

  from_port   = 80
  to_port     = 80
  ip_protocol = "tcp"
  referenced_security_group_id = aws_security_group.ec2_sg.id
}
